<resources>
    <string name="app_name">ChatInstant</string>
        <string name="title_activity_login">Sign in</string>
	
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
    <string name="prompt_password">密码 </string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项是必填项</string>
    <string name="permission_rationale">提供电子邮件完成所需的联系人权限</string>
    <string name="wecome">欢迎使用安全即使通讯demo</string>
    <string name="username">用户名</string>
    <string name="title_activity_user">我的主页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_settings">设置</string>
	
	<!-- Strings related to Settings -->
	
	<!-- Example General settings -->
	<string name="pref_header_general">通用设置</string>

    <string name="pref_title_social_recommendations">数据储存策略</string>
    <string name="pref_description_social_recommendations">缓存消息到数据库</string>

    <string name="pref_title_display_name">显示名称</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">添加好友验证</string>
    <string-array name="pref_example_list_titles">
        <item>一直</item>
        <item>需要时</item>
        <item>从不</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
	
	<!-- Example settings for Data & Sync -->
	<string name="pref_header_data_sync">数据与同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_encryption_type">
         <item>DES加密</item>
        <item>AES加密</item>
        <item>RSA加密</item>
    </string-array>
    <string-array name="pref_encryption_type_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string-array name="list_preference_entries">
      <item>Entry 1</item>
      <item>Entry 2</item>
      <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
      <item>1</item>
      <item>2</item>
      <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步设置</string>
	
	<!-- Example settings for Notifications -->
	<string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息通知</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>
    <string name="chatActivity">聊天界面</string><string name="edit">编辑</string><string name="clear_edit">清除聊天记录</string><string name="default_key">12345678</string><string name="pre_encryption_key">加密密钥</string><string name="home_page">主页</string><string name="switch_styple">切换主题</string><string name="file_manager">文件管理</string><string name="share">分享</string><string name="about_me">关于我</string><string name="communicate">沟通</string><string name="share_app_title">安全即使聊天软件</string>
</resources>
