<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
	        android:id="@+id/nav_camera"
	        android:icon="@drawable/ic_sentiment_very_satisfied_black_24dp"
	        android:title="@string/home_page" />
        <item
	        android:id="@+id/nav_gallery"
	        android:icon="@drawable/ic_menu_gallery"
	        android:title="@string/switch_styple" />
        <item
	        android:id="@+id/nav_slideshow"
	        android:icon="@drawable/ic_menu_slideshow"
	        android:title="@string/file_manager" />
        <item
	        android:id="@+id/nav_manage"
	        android:icon="@drawable/ic_menu_manage"
	        android:title="@string/action_settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
	            android:id="@+id/nav_share"
	            android:icon="@drawable/ic_menu_share"
	            android:title="@string/share" />
            <item
	            android:id="@+id/nav_send"
	            android:icon="@drawable/ic_menu_send"
	            android:title="@string/about_me" />
        </menu>
    </item>

</menu>
