<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
	
	<header
		android:fragment="reoger.hut.chatinstant.view.SettingsActivity$GeneralPreferenceFragment"
		android:icon="@drawable/ic_info_black_24dp"
		android:title="@string/pref_header_general" />

    <header
	    android:fragment="reoger.hut.chatinstant.view.SettingsActivity$NotificationPreferenceFragment"
	    android:icon="@drawable/ic_notifications_black_24dp"
	    android:title="@string/pref_header_notifications" />

    <header
	    android:fragment="reoger.hut.chatinstant.view.SettingsActivity$DataSyncPreferenceFragment"
	    android:icon="@drawable/ic_sync_black_24dp"
	    android:title="@string/pref_header_data_sync" />
	<header
		android:fragment="reoger.hut.chatinstant.view.SettingsActivity$SecuritySettingPreferenceFragment"
        android:icon="@drawable/ic_vpn_key_black_24dp"
        android:title="安全设置"/>

</preference-headers>
